[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"


[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }